--- a/week2project/index.html
+++ b/week2project/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet">
     <title>Lost in the Supermarket</title>
 </head>
 <body>
-    <header>
-        <h1>Categories</h1>
-            <nav>
-                <a href="#">Breakfast</a>
-                <a href="#">Lunch</a>
-                <a href="#">Dinner</a>
-            </nav>
-        </header>    
-    <main></main>
-    <aside><h1>Shopping Cart</h1></aside>
+<!-- Categories header -->
+    <div class="columns" id="categories">
+        <header>
+            <h1>Categories</h1>
+                <nav>
+                    <a href="#">Breakfast</a>
+                    <a href="#">Lunch</a>
+                    <a href="#">Dinner</a>
+                </nav>
+        </header>
+<!-- replace Lorem with images -->
+        <p>images go here</p>
+    </div>
+
+    <div class ="columns" id="shoppingcart">
+        <h1>Shopping Cart</h1>
+
+    </div>
+
 </body>
 </html>
