added breakfast images, fixed some formatting

--- a/week2project/index.html
+++ b/week2project/index.html
@@ -13,13 +13,21 @@
         <header>
             <h1>Categories</h1>
                 <nav>
-                    <a href="#">Breakfast</a>
-                    <a href="#">Lunch</a>
-                    <a href="#">Dinner</a>
+                    <button>Breakfast</button>
+                    <button>Lunch</button>
+                    <button>Dinner</button>
                 </nav>
         </header>
-<!-- replace Lorem with images -->
-        <p>images go here</p>
+        <div class="breakfast">
+            <img src="assets/eggs.jpeg" alt="Eggs">
+            <img src="assets/bacon.png" alt="Bacon">
+            <img src="assets/pancakes.jpeg" alt="Pancakes">
+            <img src="assets/waffles.png" alt="Waffles">
+            <img src="assets/biscuits.jpeg" alt="Biscuits">
+            <img src="assets/toast.jpeg" alt="Toast">
+            <img src="assets/homefries.jpeg" alt="Home Fries">
+            <img src="assets/fruit.jpeg" alt="Fruit">
+        </div>
     </div>
 
     <div class ="columns" id="shoppingcart">
