fixed image organization

--- a/week2project/index.html
+++ b/week2project/index.html
@@ -19,20 +19,41 @@
                 </nav>
         </header>
         <div class="breakfast">
-            <img src="assets/eggs.jpeg" alt="Eggs">
-            <img src="assets/bacon.png" alt="Bacon">
-            <img src="assets/pancakes.jpeg" alt="Pancakes">
-            <img src="assets/waffles.png" alt="Waffles">
-            <img src="assets/biscuits.jpeg" alt="Biscuits">
-            <img src="assets/toast.jpeg" alt="Toast">
-            <img src="assets/homefries.jpeg" alt="Home Fries">
-            <img src="assets/fruit.jpeg" alt="Fruit">
+            <div class="food">
+                <img src="assets/eggs.jpeg" alt="Eggs">
+            </div>
+            <!-- get smaller bacon image -->
+            <div class="food">
+                <img src="assets/bacon.png" alt="Bacon">
+            </div>
+            <div class="food">
+                <img src="assets/pancakes.jpeg" alt="Pancakes">
+            </div>
+            <div class="food">
+                <img src="assets/waffles.png" alt="Waffles">
+            </div>
+            <div class="food">
+                <img src="assets/biscuits.jpeg" alt="Biscuits">
+            </div>
+            <div class="food">
+                <img src="assets/toast.jpeg" alt="Toast">
+            </div>
+            <div class="food">
+                <img src="assets/homefries.jpeg" alt="Home Fries">
+            </div>
+            <div class="food">
+                <img src="assets/fruit.jpeg" alt="Fruit">
+            </div>    
         </div>
     </div>
 
     <div class ="columns" id="shoppingcart">
         <h1>Shopping Cart</h1>
-
+            <ul>
+                <li>Cart item 1</li>
+                <li>Cart item 2</li>
+                <li>Cart item 3</li>
+            </ul>
     </div>
 
 </body>
