--- a/week2project/index.html
+++ b/week2project/index.html
@@ -21,28 +21,36 @@
         <div class="breakfast">
             <div class="food">
                 <img src="assets/eggs.jpeg" alt="Eggs">
+                <p>Eggs</p>
             </div>
             <!-- get smaller bacon image -->
             <div class="food">
                 <img src="assets/bacon.png" alt="Bacon">
+                <p>Bacon</p>
             </div>
             <div class="food">
                 <img src="assets/pancakes.jpeg" alt="Pancakes">
+                <p>Pancakes</p>
             </div>
             <div class="food">
                 <img src="assets/waffles.png" alt="Waffles">
+                <p>Waffles</p>
             </div>
             <div class="food">
                 <img src="assets/biscuits.jpeg" alt="Biscuits">
+                <p>Biscuits &amp; Gravy</p>
             </div>
             <div class="food">
                 <img src="assets/toast.jpeg" alt="Toast">
+                <p>Toast</p>
             </div>
             <div class="food">
                 <img src="assets/homefries.jpeg" alt="Home Fries">
+                <p>Home Fries</p>
             </div>
             <div class="food">
                 <img src="assets/fruit.jpeg" alt="Fruit">
+                <p>Fruit</p>
             </div>    
         </div>
     </div>
