started JS file, added images

--- a/week2project/index.html
+++ b/week2project/index.html
@@ -8,6 +8,7 @@
     <title>Lost in the Supermarket</title>
 </head>
 <body>
+
 <!-- Categories header -->
     <div class="columns" id="categories">
         <header>
@@ -18,43 +19,46 @@
                     <button>Dinner</button>
                 </nav>
         </header>
+
+<!-- Category Items -->
         <div class="breakfast">
             <div class="food">
-                <img src="assets/eggs.jpeg" alt="Eggs">
+                <img src="assets/breakfast/eggs.jpeg" alt="Eggs">
                 <p>Eggs</p>
             </div>
             <!-- get smaller bacon image -->
             <div class="food">
-                <img src="assets/bacon.png" alt="Bacon">
+                <img src="assets/breakfast/bacon.png" alt="Bacon">
                 <p>Bacon</p>
             </div>
             <div class="food">
-                <img src="assets/pancakes.jpeg" alt="Pancakes">
+                <img src="assets/breakfast/pancakes.jpeg" alt="Pancakes">
                 <p>Pancakes</p>
             </div>
             <div class="food">
-                <img src="assets/waffles.png" alt="Waffles">
+                <img src="assets/breakfast/waffles.png" alt="Waffles">
                 <p>Waffles</p>
             </div>
             <div class="food">
-                <img src="assets/biscuits.jpeg" alt="Biscuits">
+                <img src="assets/breakfast/biscuits.jpeg" alt="Biscuits">
                 <p>Biscuits &amp; Gravy</p>
             </div>
             <div class="food">
-                <img src="assets/toast.jpeg" alt="Toast">
+                <img src="assets/breakfast/toast.jpeg" alt="Toast">
                 <p>Toast</p>
             </div>
             <div class="food">
-                <img src="assets/homefries.jpeg" alt="Home Fries">
+                <img src="assets/breakfast/homefries.jpeg" alt="Home Fries">
                 <p>Home Fries</p>
             </div>
             <div class="food">
-                <img src="assets/fruit.jpeg" alt="Fruit">
+                <img src="assets/breakfast/fruit.jpeg" alt="Fruit">
                 <p>Fruit</p>
             </div>    
         </div>
     </div>
 
+<!-- Shopping Cart -->
     <div class ="columns" id="shoppingcart">
         <h1>Shopping Cart</h1>
             <ul>
