started to build main.js

--- a/week2project/index.html
+++ b/week2project/index.html
@@ -14,9 +14,9 @@
         <header>
             <h1>Categories</h1>
                 <nav>
-                    <button>Breakfast</button>
-                    <button>Lunch</button>
-                    <button>Dinner</button>
+                    <button id="breakfast">Breakfast</button>
+                    <button id="lunch">Lunch</button>
+                    <button id="dinner">Dinner</button>
                 </nav>
         </header>
 
