--- a/week2project/index.html
+++ b/week2project/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="style.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <title>Lost in the Supermarket</title>
 </head>
 <body>
@@ -21,12 +22,11 @@
         </header>
 
 <!-- Category Items -->
-        <div class="breakfast">
-            <div class="food">
+        <div class="selections">
+            <!-- <div class="food">
                 <img src="assets/breakfast/eggs.jpeg" alt="Eggs">
                 <p>Eggs</p>
             </div>
-            <!-- get smaller bacon image -->
             <div class="food">
                 <img src="assets/breakfast/bacon.png" alt="Bacon">
                 <p>Bacon</p>
@@ -53,7 +53,7 @@
             </div>
             <div class="food">
                 <img src="assets/breakfast/fruit.jpeg" alt="Fruit">
-                <p>Fruit</p>
+                <p>Fruit</p> -->
             </div>    
         </div>
     </div>
@@ -62,11 +62,8 @@
     <div class ="columns" id="shoppingcart">
         <h1>Shopping Cart</h1>
             <ul>
-                <li>Cart item 1</li>
-                <li>Cart item 2</li>
-                <li>Cart item 3</li>
             </ul>
     </div>
-    <style src="style.css"></style>
+    <script src="main.js"></script>
 </body>
 </html>
